--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "vercel": "^41.3.2"
   },
   "name": "webhookforamraa",
+  "type": "module",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx nodemon server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
